# type-inference

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_type_inference.py
type_inference/: ast.py  lexer.py  main.py  parser.py  typing.py
