[tool.poetry]
name = "type-inference"
version = "0.1.0"
description = "toy language for type inference"
authors = ["Kadoi Takemaru"]

[tool.poetry.dependencies]
python = "^3.8"
mypy = "^0.782"
pytest = "^5.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
